# algorithm-exercise

./: .gitignore  README.md  pyproject.toml
algorithm_exercise/: sum_of_array_items_equals_number.py
daily-coding-problem/: pyproject.toml
daily-coding-problem/src/: access_variable_through_closure.py  find_first_missing_integer_in_array.py  product_of_array_items.py  serialalize_deserialize_binary_tree.py
daily-coding-problem/test/: test_access_variable_through_closure.py.py  test_find_first_missing_integer_in_array.py  test_product_of_array_items.py  test_serialalize_deserialize_binary_tree.py  test_sum_of_array_items_equals_number.py
test/: test_access_variable_through_closure.py  test_find_first_missing_integer_in_array.py  test_product_of_array_items.py  test_serialalize_deserialize_binary_tree.py  test_sum_of_array_items_equals_number.py
