[tool.poetry]
name = "algorithm-exercise"
version = "0.1.0"
description = ""
authors = ["Michael Heinecke <47566635+MichaelHeinecke@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "algorithm_exercise"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
